Fix overflowing matrix and made cells bigger

--- a/src/main/frontend/themes/kaggle-vis/styles.css
+++ b/src/main/frontend/themes/kaggle-vis/styles.css
@@ -31,6 +31,10 @@ vaadin-button{
     height: 100%;
 }
 
+.min-height-0 {
+    min-height: 0;
+}
+
 .fw-500 {
     font-weight: 500;
 }
